--- a/scp-export.yml
+++ b/scp-export.yml
@@ -32,5 +32,5 @@
     ignore_errors: yes
 
   - name: Capture scp export command result
-    local_action: copy content="{{ result | to_nice_json }}" dest="{{ save_files_path }}{{ inventory_hostname }}-idrac-scp-export-{{ scp_component | default('ALL') }}-{{ tstamp.stdout }}.json"
+    local_action: copy content="{{ result | to_nice_json }}" dest="{{ idrac_files_path }}{{ inventory_hostname }}-idrac-scp-export-{{ scp_component | default('ALL') }}-{{ tstamp.stdout }}.json"
 
