--- a/firmware-update.yml
+++ b/firmware-update.yml
@@ -24,7 +24,7 @@
       idrac_user:  "{{ idrac_user }}"
       idrac_password:  "{{ idrac_password }}"
       share_name: "{{ idrac_firmware_share | default('http://downloads.dell.com') }}"
-      catalog_file_name: "{{ idrac_firmware_catalog | defaut('Catalog.xml') }}"
+      catalog_file_name: "{{ idrac_firmware_catalog | default('Catalog.xml') }}"
       reboot: True
       # wait until all firmware updates are complete
       job_wait: True
